--- a/styles/scss/blocks/_header.scss
+++ b/styles/scss/blocks/_header.scss
@@ -24,5 +24,8 @@
     @include mobile-media {
       padding-inline: var(--container-padding-x) 0;
     }
+    @include mobile-s-media {
+      padding-inline: unset;
+    }
   }
 }
